--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   "dependencies": {
     "@mdi/font": "^3.6.95",
     "core-js": "^3.6.5",
+    "isotope-layout": "^3.0.6",
+    "jquery": "^3.5.1",
+    "minigrid": "^3.1.1",
+    "packery": "^2.1.2",
     "roboto-fontface": "*",
     "vue": "^2.6.11",
-    "vuetify": "^2.2.11"
+    "vueisotope": "^3.1.2",
+    "vuetify": "^2.3.12"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
