--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "packery": "^2.1.2",
     "roboto-fontface": "*",
     "vue": "^2.6.11",
+    "vue-packery-draggabilly-plugin": "^1.0.3",
+    "vue-packery-plugin": "^1.4.8",
     "vueisotope": "^3.1.2",
     "vuetify": "^2.3.12"
   },
